2004-11-11  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/FileSelector.cs:
	* src/PlaylistWindow.cs:

	Depend on gtksharp2 and use gtk 2.4 filesels.

2004-11-11  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/PlaylistWindow.glade:
	* data/images/Makefile.am:
	* data/images/muine-shuffle-16.png:
	* data/images/muine-shuffle.png:
	* libmuine/pointer-list-model.c: (pointer_list_model_init),
	(pointer_list_model_sort), (pointer_list_model_set_sorting):
	* libmuine/pointer-list-model.h:
	* libmuine/pointer-list-view.c: (pointer_list_view_set_sort_func),
	(pointer_list_view_sort):
	* libmuine/pointer-list-view.h:
	* src/HandleView.cs:
	* src/Makefile.am:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/StockIcons.cs:

	Add regular shuffle function.

2004-10-16  Hasbullah Bin Pit <sebol@my-penguin.org>

        * configure.in: Added "ms" (Malay) to ALL_LINGUAS

2004-09-28  Ross Girshick  <ross.girshick@gmail.com>

	* libmuine/Makefile.am:
	R libmuine/bacon-message-connection.c:
	R libmuine/bacon-message-connection.h:
	R libmuine/volume-button.c:
	R libmuine/volume-button.h:
	* src/Makefile.am:
	* src/MessageConnection.cs:
	* src/Muine.cs:
	* src/VolumeButton.cs:

	Re-implement MessageConnection and VolumeButton in C#.

2004-09-28  Jorn Baayen  <jbaayen@gnome.org>

	* src/HandleView.cs:
	* src/Player.cs:

	Fix GC issues with Mono 1.1. Thanks to Ross Girshick and Peter Johanson.

2004-09-28  Jorn Baayen  <jbaayen@gnome.org>

	* src/StringUtils.cs: Fix unsigned-to-signed conversion problem.
	Patch by David Reveman <c99drn@cs.umu.se>.

2004-09-28  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* po/ru.po:

	Added Russian translation by
	Alekseev Vladimir <compress@linux-online.ru>.

2004-09-28  Jorn Baayen  <jbaayen@gnome.org>

	* src/Player.cs:
	* src/PlaylistWindow.cs:

	Quietly remove invalid files from the lib when trying to play them.

2004-09-28  Jorn Baayen  <jbaayen@gnome.org>

	* src/StringUtils.cs:
	* src/muine.exe.config.in:
