@@ -1,3 +1,11 @@
+2004-11-12  Ross Girshick  <ross.girshick@gmail.com>
+
+	* src/MessageConnection.cs:
+	* src/Muine.cs:
+	* src/SongDatabase.cs:
+
+	Clean up MessageConnection usage.
+
 2004-11-11  Jorn Baayen  <jbaayen@gnome.org>
 
 	* configure.in:
